# radio_collar_tracker_dsp

./: .gitignore  .gitmodules  AUTHORS  BBBinstall.sh  ChangeLog  CollarLocs.txt  Dockerfile  Doxyfile  Makefile.am  README  README.md  autogen.sh  configure  configure.ac  drone_run.py  getRunNum.py  make_bin.sh  makefile  run  sdr_starter.sh
CLI_GUI/: cas.sh  run2.sh  runcli.sh
CurrentCode/: BBB_README.txt  SD_CARD_README.txt
CurrentCode/BBB/: README (Gilberto Antonio Marcon dos Santos's conflicted copy 2014-08-26).txt
CurrentCode/BBB/gpio/: build  main.c
CurrentCode/BBB/xcode/: Makefile  README.txt  build  collarTracker.c  rtlizer.c~  run  serialGPS.c.save  serialGPS.h
CurrentCode/GUI/: file_path  main  main.cpp
CurrentCode/PostProcessC/: COL  JOB  META_000369.csv  META_001547.csv  META_001548.csv  META_001549.csv  META_001550.csv  META_001551.csv  META_001552.csv  RUN_000366.csv  RUN_000367.csv  RUN_000368.csv  RUN_000427.csv  RUN_001549.csv  RUN_001550.csv  RUN_001551.csv  build-finalAnalysis  build-spectrumAnalysis  finalAnalysis.c  spectrumAnalysis.c
CurrentCode/PostProcessMatlab/: COL  DIST_000351.csv  DIST_000359.csv  DIST_000366.csv  DIST_000367.csv  DIST_000368.csv  DIST_000369.csv  DIST_000370.csv  DIST_000419.csv  JOB  KML_000367.kml  KML_000368.kml  KML_000369.kml  KML_000370.kml  KML_000419.kml  KML_000427.kml  KML_000435.kml  KML_001547.kml  KML_001548.kml  KML_001549.kml  KML_001550.kml  KML_001551.kml  KML_001552.kml  META_000351.csv  META_000359.csv  META_000360.csv  META_000366.csv  META_000367.csv  META_000368.csv  META_000369.csv  META_000370.csv  META_000419.csv  META_000427.csv  META_000435.csv  META_001547.csv  META_001548.csv  META_001549.csv  META_001550.csv  META_001551.csv  META_001552.csv  (+16 more)
CurrentCode/SD_CARD/: README.txt~
CurrentCode/SD_CARD/rct/: cfg  fileCount
MavLink_FrSkySPort/MavLink_FrSkySPort/MavLink_FrSkySPort/: MavLink_FrSkySPort.ino
autostart/: README.md  mount_RAW_DATA  parser.sh  rctstart  rctstart.sh
backup_code/BBB_001/: README.txt
backup_code/BBB_001/gpio/: .main.c.swp  README.txt  main
backup_code/BBB_001/xcode/: collarTracker  serialGPS.c  (+1 more)
backup_code/GUI/: main _002.cpp  main_001.cpp  main_003.cpp  main_004.cpp  main_005.cpp
backup_code/PostProcessC_001/: JOB  META_000367.csv  META_000368.csv  META_000370.csv  META_000419.csv  META_000427.csv  META_000435.csv  README  README.txt  RUN_000351.csv  RUN_000359.csv  RUN_000369.csv  RUN_000370.csv  RUN_000419.csv  RUN_000435.csv  build-finalAnalysis  build-spectrumAnalysis  finalAnalysis  spectrumAnalysis  spectrumAnalysis.c
collarDetect/: addNoiseCh.c  altFilter.py  makeColorMap.m  makeHeatMap.m  makeRunColorMap.m  makeRunHeatMap.m  makefile  mkCSV.py  readme.md  spectraCollarID.cpp
collarDisplay/: README.md  display_data.py  install.sh
doc/: .gitignore  Doxyfile.in  FinalAnalysisAlgorithmDescription  Makefile.am  Precision Analysis.ipynb  fir_analysis.m  mkdoc.sh  operations_flow.tex  payload_ui_wiring.sch  processing_pipeline.tex  rct_manual.tex  system-diagram.tex  trm.tex  v2_signal_detector.tex
doc/antenna_board/: lna.brd  lna.sch
doc/control_board/: rct_cntrl_brd.brd  rct_cntrl_brd.lbr  rct_cntrl_brd.sch
doc/hw_filter/: PLP-200+.brd  PLP-200+.lbr  PLP-200+.sch  PLP-250+.brd  PLP-250+.lbr  PLP-250+.sch  balun.brd  balun.lbr  balun.sch  filter_test.grc  jcbp-290.brd  jcbp-290.lbr  jcbp-290.sch  sxbp-169.brd  sxbp-169.lbr  sxbp-169.sch
doc/res/: stick_layout.xcf  taranis_layout.xcf
doc/tmp/: taranis_layout.xcf
doc/ui_board/: rct_ui_board.lbr  ui_board.brd  ui_board.lbr  ui_board.sch
gps_logger/: gps_keep_alive.py  gps_logger.py
m4/: ac_python2_module.m4  ac_python3_module.m4  ax_boost_program_options.m4  ax_boost_thread.m4
myrtlizer/: README.md  build  log.c  log.h  rtlizer.c
scripts/: .gitignore  Makefile.am  drone_run.py  generateKML.py  getRunNum.py  heatMap.py  rct_config.sh  sdr_starter.sh  tcp_kml.py  tcp_shapefile.py  udp_client.py  udp_receiver.py  visualize_precision.py
scripts/autostart/: .gitignore  10-rct_store.rules  Makefile.am  README.md  app.py  blinky.py  blinky.sh  ct.c  drone_run.py  mount_RAW_DATA.sh  mount_sd.sh  parser.sh  payload_simulator.py  rct_config  rctrun.py  rctrun.sh  rctstart.sh  run.sh  udp_command.py  umount_sd.sh
scripts/gps_logger/: Makefile.am  README.md  UBX_CFG.txt  gps_keep_alive.py  gps_logger.py
scripts/ground_control_software/: environment.yml  generateKML.py  heatMap.py  pos_estimate.py  udp_receiver.py
scripts/path_planner/: make_collar_surveys.py
sdr_record/: fopentest.c  makefile  maxmin.c  queue.c  queue.h  raw_data_to_complex.c  sample_mag.c  sdr_record  sdr_record.c  sdr_record.cpp
src/: Makefile.am
src/arduino/: .gitignore  Dockerfile  HMC5983.cpp  HMC5983.hpp  LED.hpp  Makefile  Sensor_Module.cpp  Sensor_Module.hpp  Status_Module.cpp  Status_Module.hpp  Status_Packet.hpp  nmea.cpp  nmea.hpp  reset.py  test_hw.cpp  test_status_module.cpp  ui_core.cpp  ui_core.hpp
src/python/: tcp_server.py  visualize_localization.py
src/sdr_record/: .gitignore  AbstractProcessor.hpp  AbstractSDR.hpp  Makefile  Makefile.am  Processor.cpp  Processor.hpp  README.md  UTM.h  app.py  build_and_run.sh  classifier.cpp  classifier.hpp  dsp.hpp  dspv1.cpp  dspv1.hpp  dspv2.cpp  dspv2.hpp  dspv3.cpp  dspv3.hpp  fifo.c  fir.cpp  fir.hpp  gps.cpp  gps.hpp  gps_core.hpp  gps_test.cpp  gps_test.hpp  integrator.cpp  integrator.hpp  iq_data.cpp  iq_data.hpp  localization.cpp  localization.hpp  location.hpp  makefile.bak  maxmin.c  mixer.cpp  mixer.hpp  ping.hpp  (+32 more)
src/sdr_record/archive/: Makefile.am  queue.c  queue.h  sample_mag.c
tests/: udp_client_simulator.py
tests/sdr_record/: .gitignore  Makefile.am  testClassifier.cpp  testDSPV2.cpp  testDSPV2_copy  testDSPV3.cpp  testFIR.cpp  testGPStest.cpp  testIQdata.cpp  testIntegrator.cpp  testLocalization.cpp  testMixer.cpp  testPingClassifier.cpp  testPingFIR.cpp  testProcessor.cpp  testRemixer.cpp  testResampler.cpp  testSDRTest.cpp  testSerialGPS.cpp  testUtility.cpp
wikiPhotos/: Thumbs.db
